# bajo

./: .gitignore  README.md  bajo.code-workspace  pyproject.toml
c/: bajo.c  bajo.h  opcodes.h
docs/: encoding.md  opcodes.md  vmapi.md
scripts/: build_opcodes.py  compile.cmd  compile.sh  make_all.py  renumerate_opcodes.py
src/bajo/: __init__.py  asm.py  builder.py  core.py  env.py  exc.py  macro.py  script.py
tests/: conftest.py  helpers.py  test_asm.py  test_bit.py  test_branch.py  test_call.py  test_cond.py  test_dataexp.py  test_enc.py  test_jump.py  test_load.py  test_logic.py  test_math.py  test_mov.py  test_oscill.py  test_pack.py  test_ref.py  test_rest.py  test_store.py  test_subroutine.py  test_syscall.py  vm.py
