[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bajo"
authors = [{ name = "jkmnt" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

# [project.urls]
# Documentation = "https://jkmnt.github.com/bajo"
# Source = "https://github.com/jkmnt/bajo"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "C4",
    "LOG",
    "INT",
    # "I"
]
ignore = [
    "E501",
    "B028",

    "UP035", # abc.Collections.Sequence etc instead of the typing
    "UP038", # isinstance(a, X | Y)
    "UP040", # type ... instead of the TypeaAliasType
]

[tool.pytest.ini_options]
testpaths = ["tests"]

